crates/toml_edit/tests/fixtures/invalid/control/rawmulti-us.stderr
TOML parse error at line 1, column 22
  |
1 | rawmulti-us = '''null'''
  |                      ^
Invalid multiline literal string
